fix wl data refresh, import error
made all fields required on the Add Pax/Doc modal
validate that all fields are populated before submitting import data
ensure that add/edit/import all trigger refresh and toast on success
increased modal max width to fix label/input overlap on Add Doc modal
fix hidden success modal layout

--- a/src/index.scss
+++ b/src/index.scss
@@ -26,3 +26,9 @@ $idx: 2;
 $background-image-url: "../../images/" + $idx + ".jpg";
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+.global-modal {
+  position: absolute;
+  bottom: 15px;
+  right: 100px;
+}
